# NOW-2023-lib

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Makefile  environment.yml  pyproject.toml
docs/: Makefile  changelog.md  conf.py  index.md  make.bat
docs/modules/: data_generation.rst  datasets.rst  index.rst  models.rst  plotting.rst  utils.rst
src/now_2023/: __init__.py
src/now_2023/data_generation/: __init__.py
src/now_2023/datasets/: __init__.py  _mri.py
src/now_2023/models/: __init__.py  _cnn.py  _toy.py
src/now_2023/plotting/: __init__.py  _image.py
src/now_2023/utils/: __init__.py  _images.py  _statistics.py
