[tool.poetry]
name = "now_2023"
version = "0.1.0"
description = "Library for the NOW 2023 workshop."
authors = ["Nicolas Gensollen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "*"
scikit-learn = "*"
matplotlib = "*"
torch = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
